fix(ui): black contrasted colors breaking luminance ratio

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+som-wrapper {
+	all: unset !important;
+}
+
 .SoM {
 	position: fixed;
 	z-index: 2147483646;
